--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,2 +1,23 @@
 <h1>Products#show</h1>
 <p>Find me in app/views/products/show.html.erb</p>
+
+<div id="Home-container">
+
+  <h2>List of All Products</h2>
+
+  <ul>
+    <% @products.each do |product| %>
+    <li class="product-name">
+      <strong><h5>
+        <%= link_to image_tag('sherlock-game.jpg', alt: "display puzzle-game"), product_path(product.id) %>
+        <% end %>
+      </h5></strong>
+      <% end %>
+      <p>
+        from: <%= link_to product.merchant.username, merchant_path(product.merchant_id) %>
+      </p>
+    </li>
+    <% end %>
+  </ul>
+
+</div>
