--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,7 +11,7 @@
         <%= link_to image_tag('sherlock-game.jpg', alt: "display puzzle-game"), product_path(product.id) %>
       </h5></strong>
       <p>from: <%= product.merchant.username %></p>
-      <h6>$<%= product.price.to_f %></h6>
+      <h6><%= number_to_currency(product.price) %></h6>
       <% end %>
     </div>
 
