--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,7 +10,7 @@
       <strong><h5>
         <%= link_to image_tag('sherlock-game.jpg', alt: "display puzzle-game"), product_path(product.id) %>
       </h5></strong>
-      <p>from: <%= product.merchant.username %></p>
+      <p>from: <%= link_to product.merchant.username, merchant_path(product.merchant_id)%></p>
       <h6><%= number_to_currency(product.price) %></h6>
       <% end %>
     </div>
