changes to routes and updates to merchant and product controller

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,7 +12,7 @@
 
 <div class="add-to-cart-button">
   <section>
-    <h3><%= link_to "Add to Cart", new_merchant_product_path(@product.merchant_id) %></h3>
+    <h3><%= button_to "Add to Cart", cart_path %></h3>
   </section>
 </div>
 
