updated routes to incorporate order_items create

--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -1,2 +1,9 @@
 <h1>Merchant Dashboard</h1>
 <p>aka merchant show html</p>
+
+<section class="merchant-detail-summary">
+  <div class="dasboard-container">
+
+    <h2>Merchant Summary: <%= @merchant.username %></h2>
+  </div>
+</section>
