--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -5,5 +5,19 @@
   <div class="dasboard-container">
 
     <h2>Merchant Summary: <%= @merchant.username %></h2>
+    <h4>Joined Site at: <%= @merchant.created_at.strftime("%B %d, %Y") %> | <%= @merchant.products.count %></h4>
+    <h5>Total Revenue: <%= @revenue %></h5>
+
+    <table>
+      <thead>
+        <tr>
+          <th>Orders</th>
+          <th>Order_Item</th>
+          <th>Quantity</th>
+          <th>Gross Revenue</th>
+          <th>Status</th>
+        </tr>
+      </thead>
+    </table>
   </div>
 </section>
