comment out auth call back path

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
         <% if @current_merchant %>
         <%= link_to "Log Out", '/sessions/logout' %>
         <% else %>
-        <%= link_to "Log In", auth_callback_path %>
+        <!-- <%= link_to "Log In", auth_callback_path %> -->
         <% end %>
       </div>
 
