--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -83,6 +83,7 @@ footer{
   display: flex;
   width: 100%;
   padding: 10px;
+  margin-top: 50px;
   justify-content: center;
   align-items: center;
   background-color: rgb(226, 226, 226);
