--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.image-tag {
+  border: 2px solid red;
+  width: 200px;
+  height: 200px;
+}
+
+.product-info {
+
+}
