--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
       <div class="hello">
         <% if @current_merchant %>
-        Hello, <%= @current_mercant.username %>
+        Hello, <%= @current_merchant.username %>
         <% else %>
         Hello, Guest
         <% end %>
@@ -28,7 +28,7 @@
         <% if @current_merchant %>
         <%= link_to "Log Out", '/sessions/logout' %>
         <% else %>
-        <%= link_to "Log In", auth_callback_path('github') %>
+        <%= link_to "Log In", '/auth/github' %>
         <% end %>
       </div>
 
