updated products show page with css

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -38,5 +38,10 @@
 .product-thumbnail {
   margin-top: 50px;
   border: 1px solid green;
+}
 
+.product-descp {
+  border: 1px solid red;
+  width: 45%;
+  padding: 2%;
 }
