--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,11 +8,11 @@
 }
 
 a{
-  color: rgb(144, 144, 144);
+  color: rgb(205, 205, 205);
 }
 
 a:hover{
-  color: rgb(38, 38, 38);
+  color: rgb(124, 121, 121);
   text-decoration: none;
   font-weight: bold;
 }
@@ -31,12 +31,20 @@ header nav {
   padding: 20px;
   margin-bottom: 65px;
   grid-gap: 10px;
-  background-color: rgb(226, 226, 226);
+  background-color: rgb(42, 42, 42);
+  color: rgb(223, 223, 223);
 }
 
 .braineaze{
   grid-column: 1 / 2;
   grid-row: 2 / 3;
+}
+
+.braineaze h1{
+  text-transform: uppercase;
+  background: linear-gradient(to right, #30CFD0 0%, #FFD9C7 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .hello{
@@ -72,10 +80,17 @@ header nav {
 }
 
 #cart{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   grid-column: 5 / 6;
   grid-row: 2 / 3;
 }
 
+#cart .cart-photo{
+  width: 40px;
+  height:40px;
+}
 
 // FOOTER
 
@@ -86,6 +101,6 @@ footer{
   margin-top: 50px;
   justify-content: center;
   align-items: center;
-  background-color: rgb(226, 226, 226);
-  font-weight: 100;
+  background-color: rgb(38, 38, 38);
+  color: rgb(223, 223, 223);
 }
