--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,7 +11,7 @@
     <div class="product-details">
       <div class="product-thumbnail">
         <strong><h5>
-          <%= link_to image_tag("#{product.image}", :class => 'image-tag'), product_path(product.id) %>
+          <%= link_to image_tag("#{product.image}", :alt => 'product-img', :class => 'image-tag'), product_path(product.id) %>
         </h5></strong>
         <p class="product-info">by: <%= link_to product.merchant.username, merchant_path(product.merchant_id) %></p>
         <p class="product-info"><%= number_to_currency(product.price) %></p>
