--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,7 +42,7 @@ header nav {
 
 .braineaze h1{
   text-transform: uppercase;
-  background: linear-gradient(to right, #30CFD0 0%, #FFD9C7 100%);
+  background: linear-gradient(to right, #30CFD0 0%, #FF5B0D 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
