additions to product show - using bootstrap

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -43,8 +43,11 @@
   border: 1px solid black;
 }
 
-// .product-dscrip {
-//   border: 1px solid red;
-//   width: 45%;
-//   padding: 2%;
-// }
+.product-description {
+  width: 25%;
+}
+
+.image-show-tag {
+  width: 500px;
+  height: 400px;
+}
