add favicon in application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="shortcut icon" href="app/assets/images/brain.png" type="image/png" >
+  <link rel="shortcut icon" href="favicon.ico" type="image/ico" >
   <title>Braineaze</title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
