--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,29 +39,50 @@
 
         <div class="nav-option" id="products">
           <%=link_to "Products", products_path %>
+
+
         </div>
 
         <div class="nav-option" id="category">
-          <%=link_to "Categories", categories_path %>
-        </div>
 
-        <div class="nav-option" id="merchants">
-          Merchants
-        </div>
+          <class="dropdown">
+          <a href="#" data-toggle="dropdown" role="button" aria-haspopup="falsed" aria-expanded="false">Categories <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <% Category.all.each do |category| %>
+            <li><a href="/category/category.id"></a>
+              <%=link_to category.name, category_products_path(category.id) %>
+            </li>
+            <% end %>
+          </ul>
+        </class>
+      </div>
 
-        <div class="nav-option" id="cart">
-          <%= link_to image_tag("cart.png", :class => 'cart-photo', :alt => 'cart photo'), root_path %>
-          <%= @shopping_cart.order_items.length %>
-        </div>
-      </nav>
-    </header>
+      <div class="nav-option" id="merchants">
+        <class="dropdown">
+        <a href="#" data-toggle="dropdown" role="button" aria-haspopup="falsed" aria-expanded="false">Merchants <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <% Merchant.all.each do |merchant| %>
+          <li><a href="/category/category.id"></a>
+            <%=link_to merchant.username, merchant_products_path(merchant.id) %>
+          </li>
+          <% end %>
+        </ul>
+      </class>
+      </div>
+
+      <div class="nav-option" id="cart">
+        <%= link_to image_tag("cart.png", :class => 'cart-photo', :alt => 'cart photo'), root_path %>
+        <%= @shopping_cart.order_items.length %>
+      </div>
+    </nav>
+  </header>
 
 
-    <main>
-      <%= yield %>
-    </main>
-    <footer>
-      <%= "\u00A9" %> MAGS
-    </footer>
-  </body>
-  </html>
+  <main>
+    <%= yield %>
+  </main>
+  <footer>
+    <%= "\u00A9" %> MAGS
+  </footer>
+</body>
+</html>
