added spacing on product index view with css

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -16,6 +16,11 @@
   align-content: space-between;
 }
 
+.card {
+  margin-top: 2%;
+  margin-bottom: 3%;
+}
+
 .image-tag {
   width: 300px;
   height: 200px;
@@ -43,11 +48,8 @@
   border: 1px solid black;
 }
 
-.product-description {
-  width: 25%;
-}
-
 .image-show-tag {
+  padding-bottom: 8%;
   width: 500px;
   height: 400px;
 }
