--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -17,24 +17,23 @@
 
   <div class="row">
     <div class="col">
-      <div class="col-12 text-center">
+      <div class="col-12 text-left">
         <%= link_to image_tag("#{@product.image}", :alt => 'product-img', :class => 'image-show-tag'), product_path(@product.id) %>
       </div>
     </div>
     <div class="col-4">
-      <% @product.reviews.each do |review| %>
-      <h5><%= review.rating %> out of 5</h5>
-      <p>"<%= review.description %>"</p>
-      <p><%= review.created_at.strftime("%B %d, %Y") %></p>
-      <br>
-      <% end %>
-    </div>
-  </div>
-
-
-  <div class="row">
-    <div class="col-8" class="product-desription">
-      <p><%= @product.description %></p>
+      <div class="rating">
+        <% @product.reviews.each do |review| %>
+        <h5><%= review.rating %> out of 5</h5>
+      </div>
+      <div class="review-descrip">
+        <p>"<%= review.description %>"</p>
+      </div>
+      <div class="created-at">
+        <p><%= review.created_at.strftime("%B %d, %Y") %></p>
+        <br>
+        <% end %>
+      </div>
     </div>
   </div>
 
@@ -45,6 +44,14 @@
       </p>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-8" class="product-desription">
+      <h5><strong>Product Description:</strong></h5>
+      <p class="text-capitalize"><%= @product.description %></p>
+    </div>
+  </div>
+
 
   <div class="row">
     <div class="col">
