--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,12 @@
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 
 <body>
   <header>
     <nav>
-
       <div class="hello">
         <% if @current_merchant %>
         Hello, <%= @current_merchant.username %>
@@ -33,56 +31,54 @@
       </div>
 
       <div class="braineaze">
-        <h1>
-          <%=link_to "Braineaze", products_path %></h1>
-        </div>
-
-        <div class="nav-option" id="products">
-          <%=link_to "Products", products_path %>
-
-
-        </div>
-
-        <div class="nav-option" id="category">
-
-          <class="dropdown">
-          <a href="#" data-toggle="dropdown" role="button" aria-haspopup="falsed" aria-expanded="false">Categories <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <% Category.all.each do |category| %>
-            <li><a href="/category/category.id"></a>
-              <%=link_to category.name, category_products_path(category.id) %>
-            </li>
-            <% end %>
-          </ul>
-        </class>
+        <h1><%=link_to "Braineaze", products_path %></h1>
       </div>
 
-      <div class="nav-option" id="merchants">
+      <div class="nav-option" id="products">
+        <%=link_to "Products", products_path %>
+      </div>
+
+      <div class="nav-option" id="category">
         <class="dropdown">
-        <a href="#" data-toggle="dropdown" role="button" aria-haspopup="falsed" aria-expanded="false">Merchants <span class="caret"></span></a>
+        <a href="#" data-toggle="dropdown" role="button" aria-haspopup="falsed" aria-expanded="false">Categories <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <% Merchant.all.each do |merchant| %>
+          <% Category.all.each do |category| %>
           <li><a href="/category/category.id"></a>
-            <%=link_to merchant.username, merchant_products_path(merchant.id) %>
+            <%=link_to category.name, category_products_path(category.id) %>
           </li>
           <% end %>
         </ul>
       </class>
-      </div>
+    </div>
 
-      <div class="nav-option" id="cart">
-        <%= link_to image_tag("cart.png", :class => 'cart-photo', :alt => 'cart photo'), root_path %>
-        <%= @shopping_cart.order_items.length %>
-      </div>
-    </nav>
-  </header>
+    <div class="nav-option" id="merchants">
+      <class="dropdown">
+      <a href="#" data-toggle="dropdown" role="button" aria-haspopup="falsed" aria-expanded="false">Merchants <span class="caret"></span></a>
+      <ul class="dropdown-menu">
+        <% Merchant.all.each do |merchant| %>
+        <li><a href="/category/category.id"></a>
+          <%=link_to merchant.username, merchant_products_path(merchant.id) %>
+        </li>
+        <% end %>
+      </ul>
+    </class>
+  </div>
+
+  <div class="nav-option" id="cart">
+    <%= @shopping_cart.order_items.length %>
+    <%= link_to image_tag("cart.png", :class => 'cart-photo', :alt => 'cart photo'), root_path %>
+
+  </div>
+</nav>
+</header>
 
 
-  <main>
-    <%= yield %>
-  </main>
-  <footer>
-    <%= "\u00A9" %> MAGS
-  </footer>
+<main>
+  <%= yield %>
+</main>
+
+<footer>
+  <%= "\u00A9" %> MAGS
+</footer>
 </body>
 </html>
