--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,9 +2,6 @@
 
   <% if params[:merchant_id] %>
   <h2 class="title-page">Merchants Products</h2>
-  <% else %>
-  <h2 class="title-page">List of All Products</h2>
-  <% end %>
 
   <div class="flex-container">
     <% @products.each do |product| %>
@@ -17,5 +14,22 @@
     </div>
     <% end %>
   </div>
-  
+
+  <% else %>
+
+  <h2 class="title-page">List of All Products</h2>
+
+  <div class="flex-container">
+    <% @products.each do |product| %>
+    <div class="card">
+      <%= link_to image_tag("#{product.image}", :alt => 'product-img', :class => 'image-tag'), product_path(product.id) %>
+      <div class="card-body">
+        <p class="card-text text-center">from: <%= link_to product.merchant.username, merchant_path(product.merchant_id) %> </p>
+        <p class="card-text text-center"><%= number_to_currency(product.price) %></p>
+      </div>
+    </div>
+    <% end %>
+  </div>
+
+  <% end %>
 </div>
