added a table in the merchant table, added my account button in the nav

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
 
       <div class="login">
         <% if @current_merchant %>
+        <%= link_to "My Account", merchant_path(@current_merchant.id)%>
         <%= link_to "Log Out", '/sessions/logout', method: "post" %>
         <% else %>
         <%= link_to "Log In", '/auth/github' %>
