--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -1,23 +1,37 @@
-<h1>Merchant Dashboard</h1>
-<p>aka merchant show html</p>
+<h2>Your Dashboard</h2>
+
+
 
 <section class="merchant-detail-summary">
-  <div class="dasboard-container">
+<div class="dasboard-container">
 
-    <h2>Merchant Summary: <%= @merchant.username %></h2>
-    <h4>Joined Site at: <%= @merchant.created_at.strftime("%B %d, %Y") %> | <%= @merchant.products.count %></h4>
-    <h5>Total Revenue: <%= @revenue %></h5>
+  <h3>Account Summary:</h3>
 
-    <table>
+  <h4>Name: <%= @merchant.username %></h4>
+  <p>Joined site on: <%= @merchant.created_at.strftime("%B %d, %Y") %></p>
+</div>
+
+    <h5>Total Revenue to-date: $<%= @revenue %></h5>
+
+    <table class="table">
+      <h3>Products</h3>
       <thead>
         <tr>
-          <th>Orders</th>
-          <th>Order_Item</th>
-          <th>Quantity</th>
-          <th>Gross Revenue</th>
-          <th>Status</th>
+          <th scope="col">Name</th>
+          <th scope="col">Stock</th>
+          <th scope="col">Price</th>
+          <th scope="col">Status</th>
+          <th scope="col"> </th>
         </tr>
       </thead>
+      <%@products.each do |product| %>
+      <td scope="row"><%=product.name%></td>
+      <td scope="row"><%=product.price%></td>
+      <td scope="row"><%=product.inventory%></td>
+      <td scope="row"><%=link_to product.is_active%></td>
+      <td scope="row"><button type="button" class="btn btn-info"><%=link_to "Edit", edit_marchant_product_path%></button></td>
+      <%end%>
+    </tr>
     </table>
   </div>
 </section>
