--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,2 +1,7 @@
-<h1>Products#edit</h1>
-<p>Find me in app/views/products/edit.html.erb</p>
+<main>
+
+<h2>Edit Product</h2>
+<br>
+
+<%= render partial: "add_edit_partials", locals: { action_name: "Update Product" } %>
+</main>
