--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,2 +1,7 @@
-<h1>Products#new</h1>
-<p>Find me in app/views/products/new.html.erb</p>
+<main>
+
+<h2>Add New Product</h2>
+<br>
+
+<%= render partial: "add_edit_partials", locals: { action_name: "Add Product" } %>
+</main>
