--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,2 +1,14 @@
-<h1>Categories#new</h1>
-<p>Find me in app/views/categories/new.html.erb</p>
+<main>
+
+<%= form_with model: @category do |f| %>
+
+    <div class="form-group">
+      <%= f.label :name %>
+      <%= f.text_field :name, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.submit class: "btn btn-primary" %>
+    </div>
+  <% end %>
+</main>
